# Endo-trainer-Activity-Tracker

./: .gitignore  CMakeLists.txt  OpenTLDConfig.cmake.in  README  README.md  trackerDataProcessing.m
IMU/: 14thWS_Endos_score -I.docx  Acc_study_new.m  Britty_Drill_3.mat  Britty_Drill_3.txt  Cutting_excel.xlsx  Dr_Natesan_Drill_1.mat  Dr_Natesan_Drill_2.mat  Finding_fft.m  IMU_read_byte.m  MPU6050_6Axis_MotionApps20.h  PickAndPlace_excel.xlsx  SaveAccToMat.m  Study_acc_data.m  Trivendra_Drill_1.mat  Vikram_Drill_3.mat  Vikram_Drill_3.txt  acc_data_drnatesan.mat  britty1.mat  drnatesan1_endo.mat  drnatesan1_endo.txt  energy.m  filewritesample.m  frequency_demo.m  frequency_response.m  imu_data_dr_britty.mat  imu_data_dr_natesan.mat  imu_data_vinkle.mat  imu_processing.m  matlab.mat  noactivity.mat  pre_processing.m  quat_get_product.m  raw_acc_britty.mat  raw_acc_drnatesan.mat  raw_acc_vinkle.mat  rms_signal.m  routines_quternianandAccelerationManipulation.c  spline_pl.m  suresh1_endo.mat  test.mat  (+8 more)
IMU/Data_Set_IMU/: DataLoggerV1_1.pde
IMU/Data_Set_IMU/test_motions/Acc-elevation-10cm/: Acc-elevation-10cm-gravity-input.fig  Acc-elevation-10cm-gravity-zerocrossing.fig  Acc-elevation-10cm-gravity.mat  Acc-elevation-10cm-gravity.txt  Acc-elevation-10cm-linear-input.fig  Acc-elevation-10cm-linear-zerocrossing.fig  Acc-elevation-10cm-linear.mat  Acc-elevation-10cm-linear.txt  Acc-elevation-10cm-raw_acc-input.fig  Acc-elevation-10cm-raw_acc-zerocrossing.fig  Acc-elevation-10cm-raw_acc.mat  Acc-elevation-10cm-raw_acc.txt
IMU/Data_Set_IMU/test_motions/Acc-elevation-20cm/: Acc-elevation-20cm-gravity-input.fig  Acc-elevation-20cm-gravity-zerocrossing.fig  Acc-elevation-20cm-gravity.mat  Acc-elevation-20cm-gravity.txt  Acc-elevation-20cm-linear-input.fig  Acc-elevation-20cm-linear-zerocrossing.fig  Acc-elevation-20cm-linear.mat  Acc-elevation-20cm-linear.txt  Acc-elevation-20cm-raw_acc-input.fig  Acc-elevation-20cm-raw_acc-zerocrossing.fig  Acc-elevation-20cm-raw_acc.mat  Acc-elevation-20cm-raw_acc.txt  Acc-elevation-20cm.csv
IMU/Data_Set_IMU/test_motions/Acc-elevation-2cm/: Acc-elevation-2cm-gravity-input.fig  Acc-elevation-2cm-gravity-zerocrossing.fig  Acc-elevation-2cm-gravity.mat  Acc-elevation-2cm-gravity.txt  Acc-elevation-2cm-linear-input.fig  Acc-elevation-2cm-linear-zerocrossing.fig  Acc-elevation-2cm-linear.mat  Acc-elevation-2cm-linear.txt  Acc-elevation-2cm-raw_acc-input.fig  Acc-elevation-2cm-raw_acc-zerocrossing.fig  Acc-elevation-2cm-raw_acc.mat  Acc-elevation-2cm-raw_acc.txt  Acc-elevation-2cm.csv
IMU/IMU_data/Teapot_Values/: Rawacceleration.xlsx  euler.xlsx  gravity.xls  linear_acceleration.xlsx  quaternion.xlsx  worldacceleration.xlsx  ypr.xlsx
IMU/IMU_data/sample_mpu/: Dr_Britty_07_07_2014_1834.csv  Dr_Natesan_07_07_2014_1806.csv  Dr_Natesan_07_07_2014_1806_2.csv  Dr_Natesan_07_07_2014_1830_proper.csv  Dr_VS_07_07_2014_1844.csv  Dr_still.csv  test.csv  test_gravity_.csv  test_linaccer.csv  test_qua_rawacc.csv  test_quaternion.csv  test_rawaccer.csv
IMU/IMU_test_data/: Acc-elevation-10cm.csv  Acc-horizontal-10cm-acc.mat  Acc-horizontal-10cm-gra.mat  Still_no-acc.mat  Still_no-ga.mat
IMU/Programs/: SaveAccToMat.m
IMU/Results/: DR.NATESAN_DRILL_1.txt  DR.NATESAN_DRILL_2.txt  Trivendra_Drill_1.txt  britty1_endo.txt  data_results_imu.txt  noactivity.txt  noactivity_nofilter.txt  suresh1_endo.txt  test2.txt
IMU/new data/: Dr Ari Chaco-input.fig  Dr Ashish Suri-input.fig  Dr Ashish Suri.mat  Dr Martin Bettag-input.fig  Dr Martin Bettag.mat  Recording-1-dataDG10-input.fig  Recording-1_dataDG1-input.fig  Recording-1_dataDG1.mat  Recording-1_dataDG2-input.fig  Recording-1_dataDG7-input.fig  Recording-1_dataDG7.mat  mpu_data.xlsx  test_data_with_movement-acc.mat  test_data_with_movement-gravity.mat  test_data_with_movement.csv
IMU/new data/Output-fig/: DG1.fig  DG10.fig  DG2.fig  DrAC.fig  DrAS.fig  DrMB.fig
IMU/sleight/: default_2.txt  random1.mat  sleight.m  test.cpp
IMU/sleight/accData/: Britty-1.txt  Britty-2.txt  Britty-tilt-15.txt  Ramandeep-0deg.txt  default.txt  default__1.txt  vinkle-0deg.txt
IMU/snr/: license.txt
IMU/stezcr/: license.txt
IMU/stezcr/stezcr/: zcr_ste_so.m
IMU/test/: Recording-1-filtered.fig  Recording-1-zerocrossing.fig  Recording-2-Cutting-filtered.fig  Recording-2-Cutting-input.fig  Recording-2-Cutting-zerocrossing.fig  Recording-2-Cutting.csv  Recording-2-Cutting.mat  Recording-2-Cutting.txt
settings/: settings.cfg  settings.yml
src/Neuro-Endo-Trainer-Activity-Tracker/: CMakeLists.txt  Neuro-Endo-Trainer-Activity-Tracker.cpp
src/Neuro-Endo-Trainer-Activity-Tracker/main/: 3lbbk4vj.npv  3qv5d0dk.c51  3zo15xq1.ot4  4l5cz0ni.iqm  4rqrroa5.pi1  ContourFeature.cpp  ContourFeature.hpp  Gui.cpp  Gui.h  Main.cpp  Main.h  Ring.cpp  Ring.h  RingBox.cpp  RingBox.h  Scorer.cpp  Scorer.h  cbzuc1rj.1hr  flvzsobc.bfa  islk243d.xx3  jxecy5bw.ncz  mkov2jtg.unc  params.h  pegBox.cpp  pegBox.h  pu3mhb32.bqi  qubjpagm.3ii  util.cpp  util.h  ybi2stuo.lbf  yv5manl4.ssw  z1o0apae.wtq  zzldmah5.edw
src/app/: CMakeLists.txt  Config.cpp  ContourFeature.cpp  ContourFeature.hpp  Gui.cpp  Gui.h  Main.cpp  Main.h  Neuro-Endo-Trainer-Activity-Tracker.cpp  RingBox.cpp  RingBox.h  Scorer.cpp  Scorer.h  Settings.h  c1kznklh.qli  pegBox.cpp  pegBox.h  rsuxtwtx.rxr  util.cpp  util.h
src/libopentld/: CMakeLists.txt
src/libopentld/imacq/: ImAcq.cpp  ImAcq.h
src/libopentld/tld/: DetectorCascade.cpp  ForegroundDetector.h  NNClassifier.cpp  TLD.cpp  TLD.cpp.bak  TLD.h  TLD.h.bak  cw34ivmw.kqy  twlfnmam.dkv
src/parser/: parser.cpp
(+531 files in other folders)
